# yet-another-static-java-compiler

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: cargo-test.yml
compiler/: Cargo.toml
compiler/src/: bytecode.rs  classfile.rs  layout.rs  liveness.rs  log.rs  main.rs  resolve.rs  static_heap.rs  static_interp.rs  test_util.rs  util.rs
compiler/src/backend/: llvm.rs
compiler/src/backend/llvm/: codegen.rs  mod.rs  types.rs  wrapper.rs
compiler/src/mil/: dom.rs  flat_repr.rs  flow_graph.rs  il.rs  ilgen.rs  mod.rs  transform.rs  validator.rs
compiler/src/mil/il/: block.rs  constraint.rs  debug_info.rs  func.rs  instr.rs  known_objects.rs  mod.rs  operand.rs  program.rs  types.rs
compiler/src/opt/: basic_control_flow.rs  class_constraints.rs  common_subexpr.rs  inliner.rs  mod.rs  value_prop.rs
jcl/java/lang/: Class.java  Object.java  SecurityManager.java
jcl/java/security/: AccessController.java
jcl/src/java/lang/: Class.java  ClassLoader.java  (+7 more)
rt/: Cargo.toml
rt/src/: env.rs  except.rs  lib.rs  obj.rs  test.rs
rt/src/jni/: core.rs  io.rs  math.rs  mod.rs  reflect.rs  system.rs  unsafe_class.rs
src/: bytecode.rs  classfile.rs  layout.rs  liveness.rs  main.rs  resolve.rs  static_heap.rs  static_interp.rs
src/backend/: llvm.rs
src/mil/: il.rs  ilgen.rs  mod.rs
test/: compile.sh
test/src/: Factorial.java  FieldReflection.java  FormatFloat.java  FullHello.java  InterfaceCall.java  InterfaceCallNoImplementer.java  MinimalHello.java  Nothing.java  PrintFloat.java  PrintInt.java  PrintLong.java  SuperOverride.java  VirtualCall.java
(+16 files in other folders)
