[package]
name = "mocha-compiler"
version = "0.1.0"
authors = ["Benjamin Thomas <ben@benthomas.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.0"
byteorder = "1.3"
cesu8 = "1.1"
clap = "2.33"
itertools = "0.8"
lazy_static = "1.4"
llvm-sys = "80"
smallvec = { version="1.0", features=["union"] }
zip = "0.5"
