[package]
name = "mocha-rt"
version = "0.1.0"
authors = ["Benjamin Thomas (Aviansie Ben) <ben@benthomas.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
